--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <h1>Flappy Bird</h1>
             <p>Press SPACE or click to jump</p>
         </div>
+        <!-- 导弹发射按钮 -->
+        <button id="missileButton" class="missile-button">发射导弹</button>
         <div id="gameOver" class="overlay">
             <div class="game-over-content">
                 <h2>Game Over!</h2>
